crates/python_parser/tests/snapshots/invalid_syntax@params_expected_after_star_separator.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/inline/err/params_expected_after_star_separator.py
---
## AST

```
Module(
    ModModule {
        range: 0..98,
        body: [
            FunctionDef(
                FunctionDefStmt {
                    range: 0..15,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 4..7,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 7..10,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            ExprStmt {
                                range: 12..15,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 12..15,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            FunctionDef(
                FunctionDefStmt {
                    range: 16..32,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 20..23,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 23..27,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            ExprStmt {
                                range: 29..32,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 29..32,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            FunctionDef(
                FunctionDefStmt {
                    range: 33..51,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 37..40,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 40..46,
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                range: 41..42,
                                parameter: Parameter {
                                    range: 41..42,
                                    name: Identifier {
                                        id: Name("a"),
                                        range: 41..42,
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            ExprStmt {
                                range: 48..51,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 48..51,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            FunctionDef(
                FunctionDefStmt {
                    range: 52..71,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 56..59,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 59..66,
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                range: 60..61,
                                parameter: Parameter {
                                    range: 60..61,
                                    name: Identifier {
                                        id: Name("a"),
                                        range: 60..61,
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            ExprStmt {
                                range: 68..71,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 68..71,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            FunctionDef(
                FunctionDefStmt {
                    range: 72..97,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 76..79,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 79..92,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: Some(
                            Parameter {
                                range: 83..91,
                                name: Identifier {
                                    id: Name("kwargs"),
                                    range: 85..91,
                                },
                                annotation: None,
                            },
                        ),
                    },
                    returns: None,
                    body: [
                        Expr(
                            ExprStmt {
                                range: 94..97,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 94..97,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | def foo(*): ...
  |         ^ Syntax Error: Expected one or more keyword parameter after '*' separator
2 | def foo(*,): ...
3 | def foo(a, *): ...
  |


  |
1 | def foo(*): ...
2 | def foo(*,): ...
  |         ^ Syntax Error: Expected one or more keyword parameter after '*' separator
3 | def foo(a, *): ...
4 | def foo(a, *,): ...
  |


  |
1 | def foo(*): ...
2 | def foo(*,): ...
3 | def foo(a, *): ...
  |            ^ Syntax Error: Expected one or more keyword parameter after '*' separator
4 | def foo(a, *,): ...
5 | def foo(*, **kwargs): ...
  |


  |
2 | def foo(*,): ...
3 | def foo(a, *): ...
4 | def foo(a, *,): ...
  |            ^ Syntax Error: Expected one or more keyword parameter after '*' separator
5 | def foo(*, **kwargs): ...
  |


  |
3 | def foo(a, *): ...
4 | def foo(a, *,): ...
5 | def foo(*, **kwargs): ...
  |            ^^^^^^^^ Syntax Error: Expected one or more keyword parameter after '*' separator
  |
