crates/python_parser/tests/snapshots/invalid_syntax@params_multiple_kwargs.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/inline/err/params_multiple_kwargs.py
---
## AST

```
Module(
    ModModule {
        range: 0..38,
        body: [
            FunctionDef(
                FunctionDefStmt {
                    range: 0..37,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 4..7,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 7..32,
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                range: 8..9,
                                parameter: Parameter {
                                    range: 8..9,
                                    name: Identifier {
                                        id: Name("a"),
                                        range: 8..9,
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: Some(
                            Parameter {
                                range: 22..31,
                                name: Identifier {
                                    id: Name("kwargs2"),
                                    range: 24..31,
                                },
                                annotation: None,
                            },
                        ),
                    },
                    returns: None,
                    body: [
                        Expr(
                            ExprStmt {
                                range: 34..37,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 34..37,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | def foo(a, **kwargs1, **kwargs2): ...
  |                       ^^ Syntax Error: Parameter cannot follow var-keyword parameter
  |
